# oxide-plate

./: Cargo.toml  README.md
.github/workflows/: release.yml
oxide_plate/: Cargo.toml
oxide_plate/src/: lib.rs  plate.rs
oxide_plate/src/instruments/: filters.rs
plate/: Cargo.toml  LICENSE
plate/src/: lib.rs
plate/src/instruments/: delay.rs  filters.rs  mod.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
xtask/: Cargo.toml
