[package]
name = "oxide_plate"
version = "0.0.1-rc.2"
edition = "2021"
license = "GPLv3"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "d64b2ab9cfb94773c5ee4d0e72aef5921ee95d2d", features = [
    "assert_process_allocs",
] }
num-traits = { version = "0.2", default-features = false }
