[package]
name = "oxide_plate_plugin"
version = "0.0.1"
edition = "2021"
license = "GPLv3"

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "bb274976ca138289436b0bfa209b2c8c13244225", features = [
    "assert_process_allocs",
] }
plate = { path = "../plate" }
